# multi-lang-tutorial

./: .gitignore  LICENSE  README.md  WORKSPACE.bazel  package.json  pnpm-lock.yaml
.github/workflows/: main.yml
projects/calculator/: BUILD.bazel  calculator.py  test_calculator.py
projects/go_hello_world/: BUILD.bazel  hello_world.go  hello_world_test.go
projects/go_web/: BUILD.bazel  main.go
projects/my-py-app/: BUILD.bazel  main.py
projects/node_calculator/: BUILD.bazel  calculator.js  calculator.spec.js
projects/projectA/: BUILD.bazel
projects/projectB/: BUILD.bazel
